fixed layout issues in all browsers

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,16 +1,25 @@
-.column {
-	display: inline-table;
-	padding: 2%;
+.wrapper {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-auto-rows: minmax(100px, auto);
+	grid-gap: 10px;
+	position: relative;
 }
 
 #map {
-	width: 60%;
-	height: 70%;
+	grid-column: 1 / 3;
+	max-height: 500px;
+	min-height: 500px;
 }
 
 #steps {
-	text-align: center;
-	width: 20%;
+	margin: 30px;
+	grid-column: 3 / 6;
+	justify-self: center;
+	align-self: start;
+	max-height: 500px;
+	overflow: auto;
+	
 }
 
 h2 {
